.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Date__c</fullName>
    <label>Rejected Date</label>
    <type>DateTime</type>
</CustomField>