.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <label>Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referee Unresponsive</fullName>
            </value>
            <value>
                <fullName>Referee declined</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Not relevant</fullName>
            </value>
            <value>
                <fullName>Invalid contact details</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Invalid Contact Details for Referee</fullName>
                <isActive>false</isActive>
                <label>Invalid Contact Details for Referee</label>
            </value>
            <value>
                <fullName>Referee Declined_to_Provide_Reference</fullName>
                <isActive>false</isActive>
                <label>Referee Declined_to_Provide_Reference</label>
            </value>
            <value>
                <fullName>Referee Not Relevant to Employment History</fullName>
                <isActive>false</isActive>
                <label>Referee Not Relevant to Employment History</label>
            </value>
            <value>
                <fullName>Reference Did Not Align with Expectations</fullName>
                <isActive>false</isActive>
                <label>Reference Did Not Align with Expectations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>