.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Request_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Sent_Date__c</fullName>
    <label>Request Sent Date</label>
    <type>DateTime</type>
</CustomField>