.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Return_to_same_facility__c.field-meta.xml
<CustomField>
    <fullName>Return_to_same_facility__c</fullName>
    <inlineHelpText>Given the opportunity, would you be happy for candidate to return to your facility?</inlineHelpText>
    <label>Return to same facility?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>