.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/The_last_time_you_worked_together__c.field-meta.xml
<CustomField>
    <fullName>The_last_time_you_worked_together__c</fullName>
    <description>Month + Year</description>
    <label>The last time you worked together</label>
    <length>255</length>
    <type>Text</type>
</CustomField>