.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Verified_Date_1st_Approval__c.field-meta.xml
<CustomField>
    <fullName>Verified_Date_1st_Approval__c</fullName>
    <label>Verified Date (1st Approval)</label>
    <type>DateTime</type>
</CustomField>