.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Work_well_unsupervised_No__c.field-meta.xml
<CustomField>
    <fullName>Work_well_unsupervised_No__c</fullName>
    <inlineHelpText>If no - Please tell us a bit more</inlineHelpText>
    <label>Worked well unsupervised - (If No)</label>
    <type>TextArea</type>
</CustomField>