.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Worked_well_unsupervised__c.field-meta.xml
<CustomField>
    <fullName>Worked_well_unsupervised__c</fullName>
    <inlineHelpText>Did the candidate work well unsupervised?</inlineHelpText>
    <label>Worked well unsupervised?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>