.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Working_as_EEN_RN_or_PCA__c.field-meta.xml
<CustomField>
    <fullName>Working_as_EEN_RN_or_PCA__c</fullName>
    <inlineHelpText>Do you think candidate would cope working in a #nursing agency# as a #EEN/RN# or #PCA#?</inlineHelpText>
    <label>Working as EEN/RN or PCA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>