.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Working_as_EEN_RN_or_PCA_no__c.field-meta.xml
<CustomField>
    <fullName>Working_as_EEN_RN_or_PCA_no__c</fullName>
    <inlineHelpText>If no - Please tell us a bit more</inlineHelpText>
    <label>Working as EEN/RN or PCA - no</label>
    <type>TextArea</type>
</CustomField>