.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/fields/Your_relation_to_applicant__c.field-meta.xml
<CustomField>
    <fullName>Your_relation_to_applicant__c</fullName>
    <inlineHelpText>If no - What were your role in relation to applicant?</inlineHelpText>
    <label>Your relation to applicant</label>
    <type>TextArea</type>
</CustomField>