.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Reference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>b3o__Contact__c</columns>
    <columns>b3o__Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>